@@ -3,6 +3,9 @@
 	Various tweaks for better javadoc processing.
 	* overview.html:  Renamed to package.html.
 
+	* Compilation.java (nameField):  Now name is in Procedure, not Named.
+	* LambdaExp.java (compileAlloc):  Update for setName method.
+
 2000-02-26  Per Bothner  <per@bothner.com>
 
 	* Literal.java (nullIteral):  New final static field.
